Fix shifting #2666

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -42,7 +42,8 @@
 * - 400 - screen-freeze
 */
 html {
-    overflow: auto !important;
+    overflow-y: scroll !important;
+    overflow-x: auto !important;
 }
 
 body {
